--- a/DBSpeech-1.0/README
+++ b/DBSpeech-1.0/README
@@ -3,6 +3,7 @@ The DB Speech Dataset
 
 Version 1.0
 January 15, 2022
+https://github.com/auxermen/speech-dataset-tools
 -----------------------------------------------------------------------------
 
 
@@ -80,16 +81,8 @@ This dataset consists of excerpts from the following work:
 
 * Tolstoy, Lev Nikolayevich. Bethink Yourselves!. 1904.
 
-Recordings by David Barnes. Alignment and annotation by Luka Končar. All text,
+Recordings by David Barnes. Alignment and annotation by auxermen. All text,
 audio, and annotations are in the public domain.
 
 There's no requirement to cite this work, but if you'd like to do so, you can
-link to: https://keithito.com/LJ-Speech-Dataset
-
-or use the following:
-@misc{ljspeech17,
-  author       = {Keith Ito},
-  title        = {The LJ Speech Dataset},
-  howpublished = {\url{https://keithito.com/LJ-Speech-Dataset/}},
-  year         = 2017
-}
+link to: https://github.com/auxermen/speech-dataset-tools
