--- a/DBSpeech-1.0/README
+++ b/DBSpeech-1.0/README
@@ -38,14 +38,14 @@ Each audio file is a single-channel 16-bit PCM WAV with a sample rate of
 STATISTICS
 
 Total Clips            1,065
-Total Words            225,715 //TODO
-Total Characters       1,308,674 //TODO
+Total Words            225,715
+Total Characters       1,308,674
 Total Duration         1:19:49
-Mean Clip Duration     6.57 sec //TODO
-Min Clip Duration      1.11 sec //TODO
-Max Clip Duration      10.10 sec //TODO
-Mean Words per Clip    17.23 //TODO
-Distinct Words         13,821 //TODO
+Mean Clip Duration     6.57 sec
+Min Clip Duration      1.11 sec
+Max Clip Duration      10.10 sec
+Mean Words per Clip    17.23
+Distinct Words         13,821
 
 
 
@@ -61,7 +61,7 @@ that the text accurately matched the words spoken in the audio.
 The original LibriVox recordings were distributed as 64 kbps MP3 files. As a
 result, they may contain artifacts introduced by the MP3 encoding.
 
-For more information or to report errors, please email luka.koncar@gmail.com.
+For more information or to report errors, please email auxermen@gmail.com.
 
 
 
